[package]
name = "asphalt"
version = "2.0.0-rc.3"
edition = "2024"
description = "Upload and reference Roblox assets in code"
readme = "README.md"
homepage = "https://github.com/jacktabscode/asphalt"
repository = "https://github.com/jacktabscode/asphalt"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
bit-vec = "0.8"
blake3 = "1.8.2"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
dotenvy = "0.15.7"
env_logger = "0.11.8"
fs-err = { version = "3.2.2", features = ["tokio"] }
globset = { version = "0.4.18", features = ["serde1"] }
image = "0.25.9"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
rbx_binary = { version = "2.0.1", features = ["serde"] }
rbx_xml = "2.0.1"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = [
  "gzip",
  "multipart",
  "rustls",
] }
resvg = "0.45.1"
roblox_install = "1.0.0"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
insta = { version = "1.45.1", features = ["yaml"] }
predicates = "3.1.3"

[profile.dev.package]
insta.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
