[package]
authors = ["Jack Taylor <j@jackt.io>"]
description = "Upload and reference Roblox assets in code"
edition = "2024"
homepage = "https://github.com/jacktabscode/asphalt"
license = "MIT"
name = "asphalt"
readme = "README.md"
repository = "https://github.com/jacktabscode/asphalt"
version = "2.0.1-hms"

[dependencies]
anyhow = "1.0.102"
bit-vec = "0.9.1"
blake3 = "1.8.5"
bytes = "1.11.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5"
dotenvy = "0.15.7"
env_logger = "0.11.10"
fjson = "0.3.1"
fs-err = { version = "3.3.0", features = ["tokio"] }
globset = { version = "0.4.18", features = ["serde1"] }
image = "0.25.10"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
json5 = "0.4.1"
log = "0.4.29"
miette = { version = "7.0", features = ["fancy"] }
oxipng = { version = "9.1", default-features = false, features = ["parallel", "zopfli"] }
rbx_binary = { version = "2.0.1", features = ["serde"] }
rbx_xml = "2.0.1"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "gzip",
  "multipart",
  "rustls",
] }
resvg = "0.47.0"
roblox_install = "1.0.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
insta = { version = "1.47.2", features = ["yaml"] }
predicates = "3.1.4"

[profile.dev.package]
insta.opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
